20060727 version: io_poll 0.1
20060912 code: moved to latest coreproject
20060912 code: added installer