@@ -1,0 +1,29 @@
+#!/bin/sh
+
+sd_tmp="sysdeps.out"
+f1_tmp="_int16.h"
+f2_tmp="_int32.h"
+f3_tmp="_int64.h"
+f4_tmp="_uint16.h"
+f5_tmp="_uint32.h"
+f6_tmp="_uint64.h"
+echo "SYSDEPS integers clean ${f1_tmp} ${f2_tmp} ${f3_tmp} ${f4_tmp} ${f5_tmp} ${f6_tmp}"
+
+outdir="`head -n 1 ../conf-outdir`"
+if [ -z "${outdir}" ]
+then
+  echo "fatal: outdir not defined" 2>&1
+  exit 1
+fi
+outdir="../${outdir}"
+sd_out="${outdir}/${sd_tmp}"
+f1_out="${outdir}/${f1_tmp}"
+f2_out="${outdir}/${f2_tmp}"
+f3_out="${outdir}/${f3_tmp}"
+f4_out="${outdir}/${f4_tmp}"
+f5_out="${outdir}/${f5_tmp}"
+f6_out="${outdir}/${f6_tmp}"
+
+rm -f ${f1_tmp} ${f2_tmp} ${f3_tmp} ${f4_tmp} ${f5_tmp} ${f6_tmp} \
+      ${f1_out} ${f2_out} ${f3_out} ${f4_out} ${f5_out} ${f6_out} \
+      ${sd_tmp}
