@@ -93,6 +93,11 @@ rebuild-flag:
 
 #--src--#
 
+io_poll-conf.c: ../../io_poll-conf.c rebuild-flag
+	@echo symlink io_poll-conf.c
+	@rm -f io_poll-conf.c
+	@ln -s ../../io_poll-conf.c io_poll-conf.c
+
 io_poll_add.c: ../../io_poll_add.c rebuild-flag
 	@echo symlink io_poll_add.c
 	@rm -f io_poll_add.c
@@ -142,10 +147,34 @@ _aio-mech.h: ../../_aio-mech.h rebuild-flag
 	@echo symlink _aio-mech.h
 	@rm -f _aio-mech.h
 	@ln -s ../../_aio-mech.h _aio-mech.h
+_int16.h: ../../_int16.h rebuild-flag
+	@echo symlink _int16.h
+	@rm -f _int16.h
+	@ln -s ../../_int16.h _int16.h
+_int32.h: ../../_int32.h rebuild-flag
+	@echo symlink _int32.h
+	@rm -f _int32.h
+	@ln -s ../../_int32.h _int32.h
+_int64.h: ../../_int64.h rebuild-flag
+	@echo symlink _int64.h
+	@rm -f _int64.h
+	@ln -s ../../_int64.h _int64.h
 _select.h: ../../_select.h rebuild-flag
 	@echo symlink _select.h
 	@rm -f _select.h
 	@ln -s ../../_select.h _select.h
+_uint16.h: ../../_uint16.h rebuild-flag
+	@echo symlink _uint16.h
+	@rm -f _uint16.h
+	@ln -s ../../_uint16.h _uint16.h
+_uint32.h: ../../_uint32.h rebuild-flag
+	@echo symlink _uint32.h
+	@rm -f _uint32.h
+	@ln -s ../../_uint32.h _uint32.h
+_uint64.h: ../../_uint64.h rebuild-flag
+	@echo symlink _uint64.h
+	@rm -f _uint64.h
+	@ln -s ../../_uint64.h _uint64.h
 aio-mech.h: ../../aio-mech.h rebuild-flag
 	@echo symlink aio-mech.h
 	@rm -f aio-mech.h
@@ -162,10 +191,26 @@ close.h: ../../close.h rebuild-flag
 	@echo symlink close.h
 	@rm -f close.h
 	@ln -s ../../close.h close.h
+ctxt.h: ../../ctxt.h rebuild-flag
+	@echo symlink ctxt.h
+	@rm -f ctxt.h
+	@ln -s ../../ctxt.h ctxt.h
 error.h: ../../error.h rebuild-flag
 	@echo symlink error.h
 	@rm -f error.h
 	@ln -s ../../error.h error.h
+get_opt.h: ../../get_opt.h rebuild-flag
+	@echo symlink get_opt.h
+	@rm -f get_opt.h
+	@ln -s ../../get_opt.h get_opt.h
+install.h: ../../install.h rebuild-flag
+	@echo symlink install.h
+	@rm -f install.h
+	@ln -s ../../install.h install.h
+int64.h: ../../int64.h rebuild-flag
+	@echo symlink int64.h
+	@rm -f int64.h
+	@ln -s ../../int64.h int64.h
 io_poll.h: ../../io_poll.h rebuild-flag
 	@echo symlink io_poll.h
 	@rm -f io_poll.h
@@ -179,9 +224,10 @@ select.h: ../../select.h rebuild-flag
 	@rm -f select.h
 	@ln -s ../../select.h select.h
 sources_clean: 
-	rm -f  io_poll_add.c io_poll_fdh.c io_poll_flgt.c io_poll_free.c io_poll_init.c io_poll_iom.c io_poll_reg.c io_poll_rm.c io_poll_wait.c  _aio-mech.h _select.h aio-mech.h alloc.h bin.h close.h error.h io_poll.h io_poll_fdh.h select.h
-	touch  io_poll_add.c io_poll_fdh.c io_poll_flgt.c io_poll_free.c io_poll_init.c io_poll_iom.c io_poll_reg.c io_poll_rm.c io_poll_wait.c
-sources:  io_poll_add.c io_poll_fdh.c io_poll_flgt.c io_poll_free.c io_poll_init.c io_poll_iom.c io_poll_reg.c io_poll_rm.c io_poll_wait.c  _aio-mech.h _select.h aio-mech.h alloc.h bin.h close.h error.h io_poll.h io_poll_fdh.h select.h
+	rm -f  io_poll-conf.c io_poll_add.c io_poll_fdh.c io_poll_flgt.c io_poll_free.c io_poll_init.c io_poll_iom.c io_poll_reg.c io_poll_rm.c io_poll_wait.c  _aio-mech.h _int16.h _int32.h _int64.h _select.h _uint16.h _uint32.h _uint64.h aio-mech.h alloc.h bin.h close.h ctxt.h error.h get_opt.h install.h int64.h io_poll.h io_poll_fdh.h select.h
+	touch  io_poll-conf.c io_poll_add.c io_poll_fdh.c io_poll_flgt.c io_poll_free.c io_poll_init.c io_poll_iom.c io_poll_reg.c io_poll_rm.c io_poll_wait.c
+sources:  io_poll-conf.c io_poll_add.c io_poll_fdh.c io_poll_flgt.c io_poll_free.c io_poll_init.c io_poll_iom.c io_poll_reg.c io_poll_rm.c io_poll_wait.c  _aio-mech.h _int16.h _int32.h _int64.h _select.h _uint16.h _uint32.h _uint64.h aio-mech.h alloc.h bin.h close.h ctxt.h error.h get_opt.h install.h int64.h io_poll.h io_poll_fdh.h select.h
+
 regen:
 	cpj-genmk > Makefile.tmp
 	mv Makefile.tmp Makefile
